@@ -1,3 +1,8 @@
+Wed Dec 30 19:26:18 GMT 2009  Richard Boulton <richard@tartarus.org>
+
+	* xappy/unittests/cached_searches.py: Check accesses to search
+	  results which didn't start with 0.
+
 Wed Dec 30 15:37:32 GMT 2009  Richard Boulton <richard@tartarus.org>
 
 	* xappy/unittests/testdata/chert_db/iamchert: Update chert format.
